presentatie naar derya
hupsaaa!

--- a/presentation/GK-colloquium-2juni.tex
+++ b/presentation/GK-colloquium-2juni.tex
@@ -11,6 +11,8 @@
 
 \usepackage{booktabs}
 
+\usepackage{graphicx}
+
 % \usepackage{fixltx2e}
 
 % Choose how your presentation looks.
@@ -75,7 +77,7 @@
 \vspace{1em}
 
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+ I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-intro}
 
 \end{frame}
@@ -106,7 +108,7 @@
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\pause
 
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+ I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-rep} \pause
 
 this case scale is not unique to case attraction in headless relatives \pause
@@ -114,13 +116,13 @@ this case scale is not unique to case attraction in headless relatives \pause
 \begin{itemize}
   \item in syntax
   \begin{itemize}
-    \item agreement
-    \item relativization
+    \item agreement \citep[cf.][]{moravcsik1978}
+    \item relativization \citep[cf.][]{keenan1977}
   \end{itemize} \pause
   \item in morphology
   \begin{itemize}
-    \item syncretism patterns
-    \item formal containment
+    \item syncretism patterns \citep[][cf.]{baerman2005}
+    \item formal containment \citep[][cf.]{caha2010}
   \end{itemize}
 \end{itemize}
 
@@ -235,6 +237,8 @@ this case scale is not unique to case attraction in headless relatives \pause
     \end{tabular}
   \end{table}
 
+\citealt{caha2009}
+
 \end{frame}
 
 %%
@@ -267,7 +271,7 @@ this case scale is not unique to case attraction in headless relatives \pause
 
 \begin{frame}{Gothic: both directions}
 
-\exg. hva nu wileiþ ei taujau \mybox{þamm} \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
+\exg. hva nu wilei ei taujau \mybox{þamm} \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
  what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
 
@@ -282,11 +286,11 @@ this case scale is not unique to case attraction in headless relatives \pause
 \begin{frame}{Modern German: only internal}
 
 \exg. *Ich vertraue \mybox{wem} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
- I trust\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
+ I trust\scsub{[dat]} \ac{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
  `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
 
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
- I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+ I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
  `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 \end{frame}
@@ -295,8 +299,8 @@ this case scale is not unique to case attraction in headless relatives \pause
 
 \begin{frame}{Old High German: only external}
 
-\exg. bistû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
- {are you} older\scsub{[dat]} {to Abraham} also \tsc{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
+\exg. bistû furira Abrâhame, ouh \mybox{thên} \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
+ {are you} older\scsub{[dat]} {to Abraham} also \ac{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
  `are you really older than Abraham and those who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
 
 \end{frame}
@@ -310,78 +314,638 @@ this case scale is not unique to case attraction in headless relatives \pause
   	\center
   		\begin{tabular}{cccc}
   		\toprule
-                      & \multicolumn{2}{l}{headless relatives}   & relative pronoun    \\
-  		 					      & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                      \\
-  								      \cmidrule{2-3}   & \cmidrule{4-4}
-  		Modern German 	& yes			 						&	no								& \tsc{wh}             \\
-  		Old High German	& no									&	yes								& \tsc{d}              \\
-  		Gothic		      &	yes									&	yes								& \tsc{d} + \tsc{comp} \\
+                      & \multicolumn{2}{l}{headless relatives}   & \only<2>{relative pronoun}    \\
+  		 					      & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                                \\
+  								      \cmidrule{2-3}
+  		Modern German 	& yes			 						&	no								& \only<2>{\tsc{wh}}             \\
+  		Old High German	& no									&	yes								& \only<2>{\tsc{d}}              \\
+  		Gothic		      &	yes									&	yes								& \only<2>{\tsc{d} + \tsc{comp}} \\
   		\bottomrule
   		\end{tabular}
   \end{table}
 
+\vspace{2em}
+
+\pause\pause
+
+\centering{
 how?
+}
 
 \end{frame}
 
 %%
 
+\begin{frame}{\posscitet{cinqueforthcoming} double-headed analysis }
 
-\begin{frame}{Old High German}
+	\begin{minipage}[t]{0.47\textwidth}
+  \includegraphics[width=1.1\linewidth]{cinque-tree}    \pause
 
-\ex. \ac{acc} instead of \ac{nom}
-\ag. unde ne wolden níet besên den mort den dô was geschên\\
- and not wanted not see the murder.\ac{acc} that.\ac{acc} there had happened\\
- `and they didn't want to see the murder that had happened.' \flushfill{MHG, \ac{nib} 1391,14, \pgcitealt{behaghel1923}{756}, after \pgcitealt{pittner1995}{198}}
+  \end{minipage}\hfill\vline\hfill
+	\begin{minipage}[t]{0.47\textwidth}
+    \vspace{-15em}
+\begin{itemize}
+  \item raising analysis
+  \begin{itemize}
+    \item amount interpretation: \tit{Had he continued to be dean, he could not have written the books that he wrote.}
+    \item dP₂ moves to specCP and deletes dP₁
+  \end{itemize} \pause
+  \item matching analysis
+  \begin{itemize}
+    \item individual interpretation: \tit{The book that John wrote lies on the shelf.}
+    \item dP₁ moves to specFP and deletes dP₂
+  \end{itemize}
+\end{itemize}
 
-ellipsis under identity
+	\end{minipage}
+
+\end{frame}
+
+
+\begin{frame}{The variation explained in a nutshell}
+
+  \begin{itemize}
+    \item the relative pronoun in Old High German is actually the \tbf{external head}
+    \item in Modern German, the relative pronoun \tbf{stays} in the relative clause
+    \item Gothic: ?
+  \end{itemize}
+
+\end{frame}
+
+
+\begin{frame}{Old High German: attraction in headed relatives}
+
+Old High German shows attraction in its \tbf{headed} relatives
+
+\pause
+
+\exg. unde ne wolden níet besên den mort \mybox{\tbf{den}} \tbf{dô} \tbf{was} \tbf{geschên}\\
+ and not wanted not see\scsub{[acc]} the.\tbf{\ac{acc}}.\ac{sg} murder \ac{rel}.\tbf{\ac{acc}}.\ac{sg} there had happened\scsub{[nom]}\\
+ `and they didn't want to see the murder that had happened.' \flushfill{MHG, \ac{nib} 1391,14, \pgcitealt{grimm1866}{319}, after \pgcitealt{pittner1995}{198}}
 
 \end{frame}
 
 %
 
-\begin{frame}
+\begin{frame}{Old High German: structure of headed relative}
 
-hoi
+\footnotesize{
 
-
-  	\begin{forest} boom
-  	[PP
-  			[P
-  					[about, roof]
+\ex. \begin{forest} boom
+  	[VP
+  			[V
+  					[see, roof]
   			]
-  			[DP
-  					[D
-  							[some-\tsc{gen}, roof]
-  					]
-  					[YP
-  							[CP
-  									[DP
-  											[NP
-  													[sufferings-\tsc{gen}, roof]
-  											]
-  											[DP
-  													[DP
-  															[which-\tsc{gen}, roof]
-  													]
-  													[t$_{NP}$ ]
-  											]
-  									]
-  									[IP
-  											[happened to her at home, roof]
-  									]
-  							]
-  							[Y
-  									[\sout{sufferings}, roof]
-  							]
-  					]
+				[DP
+            [DP
+                [\textcolor{goethe}{\tit{den}} `the.\tbf{\ac{acc}}.\ac{sg}', roof]
+            ]
+            [FP
+                [NP
+                    [murder, roof]
+                ]
+                [FP
+                    [F]
+                    [YP
+                        [CP
+                            [DP
+                                [\textcolor{goethe}{\tit{den}} `\ac{rel}.\tbf{\ac{acc}}.\ac{sg}', roof]
+                            ]
+                            [CP
+                                [\sout{murder} there had happened, roof]
+                            ]
+                        ]
+                        [YP
+                            [Y]
+                            [NP
+                                [\sout{murder}]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
   			]
   	]
   	\end{forest}
 
+}
+\phantom{x}
+
 \end{frame}
 
 
+
+
+
+\begin{frame}{OHG: structure and deletion in headless relatives}
+
+\footnotesize{
+  \exg. bistû furira Abrâhame, ouh \mybox{thên} \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
+   {are you} older\scsub{[dat]} {to Abraham} also \ac{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
+   `are you really older than Abraham and those who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
+
+\pause
+
+\vspace{-2em}
+
+\ex. \begin{forest} boom
+  	[CmprP
+  			[Cmpr
+  					[older, roof]
+  			]
+				[DP
+            [DP
+                [\textcolor{goethe}{\tit{thên}} `\tsc{d}.\tbf{\ac{dat}}.\tsc{pl}', roof]
+            ]
+            [FP
+                [NP
+                    [∅, roof]
+                ]
+                [FP
+                    [F]
+                    [YP
+                        [CP
+                            [DP
+                                [\sout{\textcolor{goethe}{\tit{thên}} `\ac{rel}.\tbf{\ac{dat}}.\tsc{pl}'}, roof]
+                            ]
+                            [CP
+                                [one here now \sout{∅} named, roof]
+                            ]
+                        ]
+                        [YP
+                            [Y]
+                            [NP
+                                [\sout{∅}]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+  			]
+  	]
+  	\end{forest}
+
+\phantom{x}
+}
+
+\end{frame}
+
+
+
+\begin{frame}{OHG: deletion with finer decomposed structures}
+
+\scriptsize{
+
+\begin{forest} boom
+    [CmprP
+        [Cmpr
+            [older, roof]
+        ]
+				[DP
+            [DP
+                [DP,name=dp,
+                tikz={
+                \node[label=below left:\tit{th-},
+                draw,circle,
+                xscale=0.775,yscale=0.975,
+                fit=(dp)(d)]{};
+                }
+                    [D,name=d, roof]
+                ]
+                [\tsc{datP},name=datp,
+                    tikz={
+                    \node[label=below left:\tit{-ên},
+                    draw,circle,
+                    xscale=0.775,yscale=0.975,
+                    fit=(datp)(dat)(nom)(x)]{};
+                    }
+                    [\ac{dat},name=dat]
+                      [\ac{acc}P,name=accp
+                        [\ac{acc},name=acc]
+                        [\tsc{nomP},name=nomp
+                            [\ac{nom},name=nom]
+                            [ϕ,name=np
+                                [...,name=x, roof ,baseline]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+            [FP
+                [NP
+                    [∅, roof]
+                ]
+                [FP
+                    [F]
+                    [YP
+                        [CP
+                        [DP
+                            [DP,name=dp1,
+                            tikz={
+                            \node[label=below left:\sout{\tit{th-}},
+                            draw,circle,
+                            xscale=0.775,yscale=0.975,
+                            fit=(dp1)(d1)]{};
+                            }
+                                [D,name=d1, roof]
+                            ]
+                            [\tsc{datP},name=datp1,
+                                tikz={
+                                \node[label=below left:\sout{\tit{-ên}},
+                                draw,circle,
+                                xscale=0.775,yscale=0.975,
+                                fit=(datp1)(dat1)(nom1)(x1)]{};
+                                }
+                                [\ac{dat},name=dat1]
+                                  [\ac{acc}P,name=accp1
+                                    [\ac{acc},name=acc1]
+                                    [\tsc{nomP},name=nomp1
+                                        [\ac{nom},name=nom1]
+                                        [ϕ,name=np1
+                                            [...,name=x1, roof ,baseline]
+                                        ]
+                                    ]
+                                ]
+                            ]
+                        ]
+                            [CP
+                                [one here now \sout{∅} named, roof]
+                            ]
+                        ]
+                        [YP
+                            [Y]
+                            [NP
+                                [\sout{∅}]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+  			]
+    ]
+  	\end{forest}
+
+\phantom{x}
+
+}
+
+\end{frame}
+
+\begin{frame}{OHG: deletion of a contained constituent}
+
+\scriptsize{
+
+\begin{forest} boom
+    [CmprP
+        [Cmpr
+            [older, roof]
+        ]
+				[DP
+            [DP
+                [DP,name=dp,
+                tikz={
+                \node[label=below left:\tit{th-},
+                draw,circle,
+                xscale=0.775,yscale=0.975,
+                fit=(dp)(d)]{};
+                }
+                    [D,name=d, roof]
+                ]
+                [\tsc{datP},name=datp
+                    [\ac{dat},name=dat]
+                      [\ac{acc}P,name=accp,
+                          tikz={
+                          \node[label=below left:\tit{-ên},
+                          draw,circle,
+                          xscale=0.775,yscale=0.975,
+                          fit=(accp)(acc)(nom)(x)]{};
+                          }
+                        [\ac{acc},name=acc]
+                        [\tsc{nomP},name=nomp
+                            [\ac{nom},name=nom]
+                            [ϕ,name=np
+                                [...,name=x, roof ,baseline]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+            [FP
+                [NP
+                    [∅, roof]
+                ]
+                [FP
+                    [F]
+                    [YP
+                        [CP
+                        [DP
+                            [DP,name=dp1,
+                            tikz={
+                            \node[label=below left:\sout{\tit{th-}},
+                            draw,circle,
+                            xscale=0.775,yscale=0.975,
+                            fit=(dp1)(d1)]{};
+                            }
+                                [D,name=d1, roof]
+                            ]
+                              [\ac{acc}P,name=accp1,
+                              tikz={
+                              \node[label=below left:\sout{\tit{-ên}},
+                              draw,circle,
+                              xscale=0.775,yscale=0.975,
+                              fit=(accp1)(acc1)(nom1)(x1)]{};
+                              }
+                                [\ac{acc},name=acc1]
+                                [\tsc{nomP},name=nomp1
+                                    [\ac{nom},name=nom1]
+                                    [ϕ,name=np1
+                                        [...,name=x1, roof ,baseline]
+                                    ]
+                                ]
+                            ]
+                        ]
+                            [CP
+                                [one here now \sout{∅} named, roof]
+                            ]
+                        ]
+                        [YP
+                            [Y]
+                            [NP
+                                [\sout{∅}]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+  			]
+    ]
+  	\end{forest}
+
+\phantom{x}
+
+}
+
+\end{frame}
+
+
+
+
+
+\begin{frame}{Modern German: also derived from headed?}
+
+\exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+ I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+
+\pause
+
+\exg. Den schilt den er {vür bôt} der wart schiere zeslagen\\
+the.\tsc{acc} shield.\tsc{acc} which.\tsc{acc} he held\scsub{acc}, that.\tsc{nom} was quickly shattered\scsub{nom}\\
+`The shield he held was quickly shattered' \label{ex:iaheaded}\flushfill{Middle High German}
+
+\pause
+
+\centering{
+no
+}
+
+\end{frame}
+
+
+
+
+\begin{frame}{Modern German: matching analysis}
+
+\scriptsize{
+
+\begin{forest} boom
+    [VP
+        [V
+            [invite, roof]
+        ]
+            [FP
+                [NP
+                    [∅, roof]
+                ]
+                [FP
+                    [F]
+                    [YP
+                        [CP
+                        [RelP
+                            [RelP,name=dp1,
+                            tikz={
+                            \node[label=below left:\tit{w-},
+                            draw,circle,
+                            xscale=0.775,yscale=0.975,
+                            fit=(dp1)(d1)]{};
+                            }
+                                [Rel,name=d1, roof]
+                            ]
+                              [\tsc{datP},name=datp
+                                  [\ac{dat},name=dat]
+                                  [\ac{acc}P,name=accp1,
+                                  tikz={
+                                  \node[label=below left:\tit{-em},
+                                  draw,circle,
+                                  xscale=0.775,yscale=0.975,
+                                  fit=(accp1)(acc1)(nom1)(x1)]{};
+                                  }
+                                    [\ac{acc},name=acc1]
+                                    [\tsc{nomP},name=nomp1
+                                        [\ac{nom},name=nom1]
+                                        [ϕ,name=np1
+                                            [...,name=x1, roof ,baseline]
+                                        ]
+                                    ]
+                                ]
+                            ]
+                        ]
+                            [CP
+                                [also Maria trusts \sout{\tit{wem}}, roof]
+                            ]
+                        ]
+                        [YP
+                            [Y]
+                            [IndefP
+                                [IndefP,name=dp,
+                                tikz={
+                                \node[label=below left:\sout{\tit{w-}},
+                                draw,circle,
+                                xscale=0.775,yscale=0.975,
+                                fit=(dp)(d)]{};
+                                }
+                                    [Indef,name=d, roof]
+                                ]
+                                      [\ac{acc}P,name=accp,
+                                          tikz={
+                                          \node[label=below left:\sout{\tit{-en}},
+                                          draw,circle,
+                                          xscale=0.775,yscale=0.975,
+                                          fit=(accp)(acc)(nom)(x)]{};
+                                          }
+                                        [\ac{acc},name=acc]
+                                        [\tsc{nomP},name=nomp
+                                            [\ac{nom},name=nom]
+                                            [ϕ,name=np
+                                                [...,name=x, roof ,baseline]
+                                            ]
+                                        ]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+  			]
+    ]
+  	\end{forest}
+
+\phantom{x}
+
+}
+
+\end{frame}
+
+
+%two separate ellipsis operations
+%gapping + determiner deletion
+%difference: it is obligatory, not optional
+
+\begin{frame}{Gothic: more questions than answers}
+
+\begin{itemize}
+  \item Not like Old High German
+    \begin{itemize}
+      \item No attraction in headed relatives \citep{harbert1992}
+      \item Phonological effects with \tit{-ei} > relative pronoun is in the relative clause \citep{harbert1992}
+    \end{itemize}
+  \item How does the external case end up in the relative clause?
+\end{itemize}
+
+\end{frame}
+
+
+
+% Gothic:
+% no attraction (Harbert 1992 paper)
+% phonological effects with C, so no movement out of the relative clause
+%
+%
+%
+%
+% Polish: no non-matching
+%
+% light-headed relatives: t, c
+% Bartosz: indef = t
+
+
+
+\begin{frame}{Matching only languages like Polish}
+
+\scriptsize{
+
+\begin{forest} boom
+    [VP
+        [V
+            [invite, roof]
+        ]
+            [FP
+                [NP
+                    [∅, roof]
+                ]
+                [FP
+                    [F]
+                    [YP
+                        [CP
+                        [RelP
+                            [RelP,name=dp1,
+                            tikz={
+                            \node[label=below left:\tit{k-},
+                            draw,circle,
+                            xscale=0.775,yscale=0.975,
+                            fit=(dp1)(d1)]{};
+                            }
+                                [Rel,name=d1, roof]
+                            ]
+                            [\tsc{datP},name=datp
+                                [\ac{dat},name=dat]
+                                  [\ac{acc}P,name=accp1,
+                                  tikz={
+                                  \node[label=below left:\tit{-omu},
+                                  draw,circle,
+                                  xscale=0.775,yscale=0.975,
+                                  fit=(accp1)(acc1)(nom1)(x1)]{};
+                                  }
+                                    [\ac{acc},name=acc1]
+                                    [\tsc{nomP},name=nomp1
+                                        [\ac{nom},name=nom1]
+                                        [ϕ,name=np1
+                                            [...,name=x1, roof ,baseline]
+                                        ]
+                                    ]
+                                ]
+                            ]
+                        ]
+                            [CP
+                                [also Maria trusts \sout{\tit{kogo}}, roof]
+                            ]
+                        ]
+                        [YP
+                            [Y]
+                            [IndefP
+                                [IndefP,name=dp,
+                                tikz={
+                                \node[label=below left:\tit{t-},
+                                draw,circle,
+                                xscale=0.775,yscale=0.975,
+                                fit=(dp)(d)]{};
+                                }
+                                    [Indef,name=d, roof]
+                                ]
+                                      [\ac{acc}P,name=accp,
+                                          tikz={
+                                          \node[label=below left:\tit{-ego},
+                                          draw,circle,
+                                          xscale=0.775,yscale=0.975,
+                                          fit=(accp)(acc)(nom)(x)]{};
+                                          }
+                                        [\ac{acc},name=acc]
+                                        [\tsc{nomP},name=nomp
+                                            [\ac{nom},name=nom]
+                                            [ϕ,name=np
+                                                [...,name=x, roof ,baseline]
+                                            ]
+                                        ]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+  			]
+    ]
+  	\end{forest}
+
+\phantom{x}
+
+\citealt{wiland2019}
+
+}
+
+\end{frame}
+
+
+
+\appendix
+
+\begin{frame}{References}
+
+	\tiny{
+  \newrefcontext[sorting=nyt]
+  \tiny{
+		\printbibliography
+    }
+	}
+
+\end{frame}
 
 
 \end{document}
