--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -416,7 +416,7 @@
   journal = {Natural Language and Linguistic Theory},
   author = {Caha, Pavel},
   year = {2013},
-  pages = {1015-1066},
+  pages = {1015--1066},
   doi={10.1007/s11049-013-9206-8}
 }
 
@@ -449,6 +449,8 @@
   year={2014}
 }
 
+%%not checked for doi anymore
+
 @incollection{caha2020,
   title={Nanosyntax: some key features},
   author={Caha, Pavel},
@@ -457,4 +459,42 @@
   editor={Artemis Alexiadou, Ruth Kramer, Alec Marantz, Isabel-Oltra Massuet},
   adress={Cambridge},
   publisher={Cambridge University Press}
+}
+
+@incollection{grimm1866,
+  title={Über einige Fälle der Attraction},
+  author={Grimm, Jacob},
+  year={1866},
+  booktitle={Kleinere Schriften III. Abhandlungen zur Literatur und Grammatik},
+  adress={Berlin},
+  editor={Jacob  Grimm},
+  pages={312--348},
+  publisher={Dümmler}
+}
+
+@book{cinqueforthcoming,
+  address = {Cambridge},
+  title = {The Syntax of Relative Clauses: A Unified Double-headed Analysis},
+  publisher = {Cambridge University Press},
+  author = {Cinque, Guglielmo},
+  year = {forthcoming}
+}
+
+
+@book{wiland2019,
+  title={The spell-out algorithm and lexicalization patterns: Slavic verbs and complementizers},
+  author={Wiland, Bartosz},
+  year={2019},
+  publisher = {Language Science Press},
+  address = {Berlin}
+}
+
+@article{harbert1992,
+  title={Gothic relative clauses and syntactic theory},
+  author={Harbert, Wayne},
+  journal={On Germanic linguistics: Issues and methods},
+  pages={109--146},
+  year={1992},
+  publisher={Mouton de Gruyter},
+  address={Berlin}
 }
