een keer doorheen gelopen
nog wat aan doen, maar prima!

--- a/presentation/GK-colloquium-2juni.tex
+++ b/presentation/GK-colloquium-2juni.tex
@@ -69,6 +69,9 @@
 \end{frame}
 
 \begin{frame}{Case competition in headless relatives}
+
+  \pause
+
 \begin{itemize}
   \item \tbf{case competition}: a situation in which two cases are assigned but only one of them surfaces \pause
   \item \tbf{headless relative}: a relative clause construction that lacks a head \pause
@@ -78,13 +81,15 @@
 
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-intro}
+ `I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-intro}
 
 \end{frame}
 
 %
 
 \begin{frame}{The content of my dissertation}
+
+\pause
 
 \begin{itemize}
   \item headless relatives in three Germanic languages:
@@ -105,13 +110,15 @@
 
 \begin{frame}{The crosslinguistically stable one}
 
+\pause
+
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\pause
 
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-rep} \pause
+ `I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-rep} \pause
 
-this case scale is not unique to case attraction in headless relatives \pause
+this case scale is not unique to case competition in headless relatives \pause
 
 \begin{itemize}
   \item in syntax
@@ -121,8 +128,8 @@ this case scale is not unique to case attraction in headless relatives \pause
   \end{itemize} \pause
   \item in morphology
   \begin{itemize}
-    \item syncretism patterns \citep[][cf.]{baerman2005}
-    \item formal containment \citep[][cf.]{caha2010}
+    \item syncretism patterns \citep[cf.][]{baerman2005}
+    \item formal containment \citep[cf.][]{caha2010}
   \end{itemize}
 \end{itemize}
 
@@ -131,6 +138,10 @@ this case scale is not unique to case attraction in headless relatives \pause
 %%
 
 \begin{frame}{A reflex of morphology in syntax}
+
+\pause
+
+\citealt[cf.][]{caha2009}
 
 \begin{table}[h]
   \center
@@ -192,6 +203,8 @@ this case scale is not unique to case attraction in headless relatives \pause
 
 \begin{frame}{A reflex of morphology in syntax}
 
+\citealt[cf.][]{caha2009}
+
   \begin{table}[H]
     \center
   	% \caption {\ac{dat}P deletes \ac{acc}P}
@@ -237,13 +250,13 @@ this case scale is not unique to case attraction in headless relatives \pause
     \end{tabular}
   \end{table}
 
-\citealt{caha2009}
-
 \end{frame}
 
 %%
 
 \begin{frame}{The crosslinguistically differing one}
+
+\pause
 
 \begin{itemize}
   \item \tbf{internal case} refers to the case associated with the relative pronoun internal to the relative clause
@@ -258,9 +271,9 @@ this case scale is not unique to case attraction in headless relatives \pause
 		\toprule
 		 					      & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	\\
 								      \cmidrule{2-3}
-		Modern German 	& yes			 						&	no								\\
-		Old High German	& no									&	yes								\\
-		Gothic		      &	yes									&	yes								\\
+		Gothic		      &	\tsc{int}						&	\tsc{ext}					\\
+		Modern German 	& \tsc{int}						&	*			  					\\
+		Old High German	& *								   	&	\tsc{ext}					\\
 		\bottomrule
 		\end{tabular}
 \end{table}
@@ -269,15 +282,15 @@ this case scale is not unique to case attraction in headless relatives \pause
 
 %%
 
-\begin{frame}{Gothic: both directions}
-
-\exg. hva nu wilei ei taujau \mybox{þamm} \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
- what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
+\begin{frame}{Gothic: both}
 
 \exg. ushafjands \tbf{ana} \mybox{\tbf{þamm}} \tbf{-ei} \tbf{lag}\\
 {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} -\ac{comp} lay\\
 `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
+
+\exg. hva nu wilei ei taujau \mybox{þamm} \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
+ what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
+ `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
 
 \end{frame}
 
@@ -285,13 +298,13 @@ this case scale is not unique to case attraction in headless relatives \pause
 
 \begin{frame}{Modern German: only internal}
 
-\exg. *Ich vertraue \mybox{wem} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
- I trust\scsub{[dat]} \ac{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
- `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
-
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+ `I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+
+\exg. *Ich vertraue \mybox{wem} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+I trust\scsub{[dat]} \ac{rel}.\ac{dat}.\tsc{an} also Maria likes\scsub{[acc]}.\\
+`I trust whoever Maria also likes.' \flushfill{Modern German, \pgcitealt{vogel2001}{345}}
 
 \end{frame}
 
@@ -301,7 +314,7 @@ this case scale is not unique to case attraction in headless relatives \pause
 
 \exg. bistû furira Abrâhame, ouh \mybox{thên} \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
  {are you} older\scsub{[dat]} {to Abraham} also \ac{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
- `are you really older than Abraham and those who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
+ `are you really older than Abraham and those who have been mentioned here?' \flushfill{Old High German, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
 
 \end{frame}
 
@@ -314,12 +327,12 @@ this case scale is not unique to case attraction in headless relatives \pause
   	\center
   		\begin{tabular}{cccc}
   		\toprule
-                      & \multicolumn{2}{l}{headless relatives}   & \only<2>{relative pronoun}    \\
+                      & \multicolumn{2}{l}{headless relatives}  & \only<2>{relative pronoun}    \\
   		 					      & \ac{int}>\ac{ext}		& \ac{ext}>\ac{int}	&                                \\
   								      \cmidrule{2-3}
-  		Modern German 	& yes			 						&	no								& \only<2>{\tsc{wh}}             \\
-  		Old High German	& no									&	yes								& \only<2>{\tsc{d}}              \\
-  		Gothic		      &	yes									&	yes								& \only<2>{\tsc{d} + \tsc{comp}} \\
+  		Gothic		      &	\tsc{int}						&	\tsc{ext}					& \only<2-3>{\tsc{d} + \tsc{comp}} \\
+  		Modern German 	& \tsc{int}			 			&	*								  & \only<2-3>{\tsc{wh}}             \\
+  		Old High German	& * 									&	\tsc{int}			   	& \only<2-3>{\tsc{d}}              \\
   		\bottomrule
   		\end{tabular}
   \end{table}
@@ -336,7 +349,7 @@ how?
 
 %%
 
-\begin{frame}{\posscitet{cinqueforthcoming} double-headed analysis }
+\begin{frame}{\posscitet{cinqueforthcoming} double-headed analysis}
 
 	\begin{minipage}[t]{0.47\textwidth}
   \includegraphics[width=1.1\linewidth]{cinque-tree}    \pause
@@ -375,13 +388,11 @@ how?
 
 \begin{frame}{Old High German: attraction in headed relatives}
 
-Old High German shows attraction in its \tbf{headed} relatives
-
 \pause
 
 \exg. unde ne wolden níet besên den mort \mybox{\tbf{den}} \tbf{dô} \tbf{was} \tbf{geschên}\\
  and not wanted not see\scsub{[acc]} the.\tbf{\ac{acc}}.\ac{sg} murder \ac{rel}.\tbf{\ac{acc}}.\ac{sg} there had happened\scsub{[nom]}\\
- `and they didn't want to see the murder that had happened.' \flushfill{MHG, \ac{nib} 1391,14, \pgcitealt{grimm1866}{319}, after \pgcitealt{pittner1995}{198}}
+ `and they didn't want to see the murder that had happened.' \flushfill{Middle High Germans, \ac{nib} 1391,14, \pgcitealt{grimm1866}{319}, after \pgcitealt{pittner1995}{198}}
 
 \end{frame}
 
@@ -442,7 +453,7 @@ Old High German shows attraction in its \tbf{headed} relatives
 \footnotesize{
   \exg. bistû furira Abrâhame, ouh \mybox{thên} \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
    {are you} older\scsub{[dat]} {to Abraham} also \ac{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
-   `are you really older than Abraham and those who have been mentioned here?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
+   `are you really older than Abraham and those who have been mentioned here?' \flushfill{Old High German, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
 
 \pause
 
@@ -687,6 +698,17 @@ Old High German shows attraction in its \tbf{headed} relatives
 
 \end{frame}
 
+\begin{frame}{Summary Old High German}
+
+  only external, no internal
+  derived from headed relative
+
+
+  two options:
+  1 attraction + deletion under identity under c-command
+  2 no attraction + deletion under containment under c-command
+
+\end{frame}
 
 
 
@@ -695,18 +717,21 @@ Old High German shows attraction in its \tbf{headed} relatives
 
 \exg. Ich {lade ein} \mybox{\tbf{wem}} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I invite\scsub{[acc]} \ac{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+ `I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 \pause
 
-\exg. Den schilt den er {vür bôt} der wart schiere zeslagen\\
-the.\tsc{acc} shield.\tsc{acc} which.\tsc{acc} he held\scsub{acc}, that.\tsc{nom} was quickly shattered\scsub{nom}\\
+\exg. Den schilt \mybox{\tbf{den}} \tbf{er} {\tbf{vür} \tbf{bôt}} der wart schiere zeslagen\\
+the.\tsc{acc} shield.\tsc{acc} \tsc{rel}.\tsc{acc}.\tsc{an} he held\scsub{acc}, that.\tsc{nom} was quickly shattered\scsub{nom}\\
 `The shield he held was quickly shattered' \label{ex:iaheaded}\flushfill{Middle High German}
 
 \pause
 
 \centering{
-no
+no, because
+
+different pronoun
+different sentence structure
 }
 
 \end{frame}
@@ -806,19 +831,31 @@ no
 \end{frame}
 
 
-%two separate ellipsis operations
-%gapping + determiner deletion
-%difference: it is obligatory, not optional
+\begin{frame}
+
+  deletion under Kayne's c-command under containment in two parts
+
+  similar to gapping + determiner deletion?
+
+  %two separate ellipsis operations
+  %gapping + determiner deletion
+  %difference: it is obligatory, not optional
+
+
+\end{frame}
+
+
+
 
 \begin{frame}{Gothic: more questions than answers}
 
 \begin{itemize}
-  \item Not like Old High German
+  \item not like Old High German
     \begin{itemize}
-      \item No attraction in headed relatives \citep{harbert1992}
-      \item Phonological effects with \tit{-ei} > relative pronoun is in the relative clause \citep{harbert1992}
+      \item no attraction in headed relatives \citep{harbert1992}
+      \item phonological effects with \tit{-ei} > relative pronoun is in the relative clause \citep{harbert1992}
     \end{itemize}
-  \item How does the external case end up in the relative clause?
+  \item how does the external case end up in the relative clause? (and why doesn't it in Modern German?)
 \end{itemize}
 
 \end{frame}
